# collect-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
benches/: frequency-map.rs  unicode-point-map.rs
examples/: text-file-char-freq.rs
src/: lib.rs  macros.rs
src/collections/: mod.rs
src/containers/: frequency_map.rs  mod.rs  unicode_point_map.rs
src/utils/: mod.rs
