
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
	"Zach Struck <zachstruck@gmail.com>",
]
categories = [
	"data-structures",
	"rust-patterns",
]
description = "Special and custom Collections and Containers (for Rust)"
edition = "2021"
homepage = "https://github.com/synesissoftware/collect-rs"
keywords = [
	"containers",
	"collections",
]
license = "BSD-3-Clause"
name = "collect-rs"
readme = "README.md"
repository = "https://github.com/synesissoftware/collect-rs"
version = "0.2.0"


# ##########################################################
# Targets

[lib]
name = "collect_rs"
path = "src/lib.rs"

[[bench]]
name = "frequency-map"
harness = false

[[bench]]
name = "unicode-point-map"
harness = false

[[example]]
name = "text-file-char-freq"
path = "examples/text-file-char-freq.rs"


# ##########################################################
# Features

[features]

# General features:
#
# - "_NEVER_TO_BE_ENABLED" - this is a placeholder feature and must NEVER be specified;
# - "null-feature" - a feature that has no effect (and, thus, is useful for simplifying driver scripts);

_NEVER_TO_BE_ENABLED = []
null-feature = []

# Crate-specific features:
#


# ##########################################################
# Dependencies

[dependencies]

base-traits = { version = "0.0" }


[dev-dependencies]

criterion = { version = "0.5" }
test_help-rs = { version = "0.1" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

